Fix search bar list when too big for screen

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -803,6 +803,8 @@ width: 100%
   border: 1px solid #E8E8E8;
   width: 375px;
   background-color: white;
+  overflow: scroll;
+  height: 60vh;
 }
 
 .search-bar-item-container {
